--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-leap-day
 title: jeewon is the best !!!
-description: don't know what to type !!!
+description: don't know what to write about !!!!!!
